Changelog
=========

0.1.14 - 
-------------------

- Minor bug fixes.
  [ggozad]

0.1.13 - 2023-12-04
-------------------

- Forgotten db upgrade.
  [ggozad]

0.1.11 - 2023-11-29
-------------------

- Syntax highlighting for json responses.
  [ggozad]

- Support for `format` parameter in Ollama (essentially json for the time being).
  [ggozad]

0.1.10 - 2023-11-14
-------------------

- Prompt widget improvements.
  [ggozad]

- When pasting multiline text to the singleline input, switch to multiline textarea
  [ggozad]

- Disable SSL verification via OTERM_VERIFY_SSL.
  [huynle]

0.1.9 - 2023-11-04
------------------

- Introduce FlexibleInput, an input that can be multiline.
  [ggozad]

0.1.8 - 2023-11-03
------------------

- Remove distutils dependency, make oterm compatible with python 3.12.
  [denehoffman]

0.1.7 - 2023-11-01
------------------

- Allow customizing the system and template of models.
  [ggozad]

- DB migrations.
  [ggozad]


0.1.5 - 2023-11-01
------------------

- Fix whitespace bug in model selection screen.
  [ggozad]

0.1.4 - 2023-10-18
------------------

- Show template, system, and params in the model selection screen.
  [ggozad]

- Click to copy to clipboard.
  [ggozad]

0.1.3 - 2023-10-17
------------------

- Remove pydantic and as a result, the rust dependency & build in homebrew.
  [ggozad]

- Show discreet info on running model.
  [ggozad]

0.1.2 - 2023-10-17
------------------

- Ability to rename chats.
  [ggozad]

0.1.0 - 2023-10-15
------------------

- Initial release.
  [ggozad]